--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: 3.0.10
+  oktoast: 2.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
