--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   dio: 3.0.10
   oktoast: 2.3.2
   circular_profile_avatar: ^1.0.6
-
+  get: ^3.15.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
